@@ -20,37 +20,139 @@
 import inspect
 
 from bzrlib import decorators
-from bzrlib.decorators import needs_read_lock, needs_write_lock
 from bzrlib.tests import TestCase
 
 
-class DecoratorSample(object):
-    """Sample class that uses decorators.
+def create_decorator_sample(style, except_in_unlock=False):
+    """Create a DecoratorSample object, using specific lock operators.
 
-    Log when requests go through lock_read()/unlock() or lock_write()/unlock.
+    :param style: The type of lock decorators to use (fast/pretty/None)
+    :param except_in_unlock: If True, raise an exception during unlock
+    :return: An instantiated DecoratorSample object.
     """
 
-    def __init__(self):
-        self.actions = []
+    if style is None:
+        # Default
+        needs_read_lock = decorators.needs_read_lock
+        needs_write_lock = decorators.needs_write_lock
+    elif style == 'pretty':
+        needs_read_lock = decorators._pretty_needs_read_lock
+        needs_write_lock = decorators._pretty_needs_write_lock
+    else:
+        needs_read_lock = decorators._fast_needs_read_lock
+        needs_write_lock = decorators._fast_needs_write_lock
 
-    def lock_read(self):
-        self.actions.append('lock_read')
+    class DecoratorSample(object):
+        """Sample class that uses decorators.
 
-    def lock_write(self):
-        self.actions.append('lock_write')
+        Log when requests go through lock_read()/unlock() or
+        lock_write()/unlock.
+        """
 
-    def unlock(self):
-        self.actions.append('unlock')
+        def __init__(self):
+            self.actions = []
 
-    @needs_read_lock
-    def frob(self):
-        """Frob the sample object"""
-        self.actions.append('frob')
+        def lock_read(self):
+            self.actions.append('lock_read')
 
-    @needs_write_lock
-    def bank(self, bar, biz=None):
-        """Bank the sample, but using bar and biz."""
-        self.actions.append(('bank', bar, biz))
+        def lock_write(self):
+            self.actions.append('lock_write')
+
+        def unlock(self):
+            if except_in_unlock:
+                self.actions.append('unlock_fail')
+                raise KeyError('during unlock')
+            else:
+                self.actions.append('unlock')
+
+        @needs_read_lock
+        def frob(self):
+            """Frob the sample object"""
+            self.actions.append('frob')
+            return 'newbie'
+
+        @needs_write_lock
+        def bank(self, bar, biz=None):
+            """Bank the sample, but using bar and biz."""
+            self.actions.append(('bank', bar, biz))
+            return (bar, biz)
+
+        @needs_read_lock
+        def fail_during_read(self):
+            self.actions.append('fail_during_read')
+            raise TypeError('during read')
+
+        @needs_write_lock
+        def fail_during_write(self):
+            self.actions.append('fail_during_write')
+            raise TypeError('during write')
+
+    return DecoratorSample()
+
+
+class TestDecoratorActions(TestCase):
+
+    _decorator_style = None # default
+
+    def test_read_lock_locks_and_unlocks(self):
+        sam = create_decorator_sample(self._decorator_style)
+        self.assertEqual('newbie', sam.frob())
+        self.assertEqual(['lock_read', 'frob', 'unlock'], sam.actions)
+
+    def test_write_lock_locks_and_unlocks(self):
+        sam = create_decorator_sample(self._decorator_style)
+        self.assertEqual(('bar', 'bing'), sam.bank('bar', biz='bing'))
+        self.assertEqual(['lock_write', ('bank', 'bar', 'bing'), 'unlock'],
+                         sam.actions)
+
+    def test_read_lock_unlocks_during_failure(self):
+        sam = create_decorator_sample(self._decorator_style)
+        self.assertRaises(TypeError, sam.fail_during_read)
+        self.assertEqual(['lock_read', 'fail_during_read', 'unlock'],
+                         sam.actions)
+
+    def test_write_lock_unlocks_during_failure(self):
+        sam = create_decorator_sample(self._decorator_style)
+        self.assertRaises(TypeError, sam.fail_during_write)
+        self.assertEqual(['lock_write', 'fail_during_write', 'unlock'],
+                         sam.actions)
+
+    def test_read_lock_raises_original_error(self):
+        sam = create_decorator_sample(self._decorator_style,
+                                      except_in_unlock=True)
+        self.assertRaises(TypeError, sam.fail_during_read)
+        self.assertEqual(['lock_read', 'fail_during_read', 'unlock_fail'],
+                         sam.actions)
+
+    def test_write_lock_raises_original_error(self):
+        sam = create_decorator_sample(self._decorator_style,
+                                      except_in_unlock=True)
+        self.assertRaises(TypeError, sam.fail_during_write)
+        self.assertEqual(['lock_write', 'fail_during_write', 'unlock_fail'],
+                         sam.actions)
+
+    def test_read_lock_raises_unlock_error(self):
+        sam = create_decorator_sample(self._decorator_style,
+                                      except_in_unlock=True)
+        self.assertRaises(KeyError, sam.frob)
+        self.assertEqual(['lock_read', 'frob', 'unlock_fail'], sam.actions)
+
+    def test_write_lock_raises_unlock_error(self):
+        sam = create_decorator_sample(self._decorator_style,
+                                      except_in_unlock=True)
+        self.assertRaises(KeyError, sam.bank, 'bar', biz='bing')
+        self.assertEqual(['lock_write', ('bank', 'bar', 'bing'),
+                          'unlock_fail'], sam.actions)
+
+
+class TestFastDecoratorActions(TestDecoratorActions):
+
+    _decorator_style = 'fast'
+
+
+class TestPrettyDecoratorActions(TestDecoratorActions):
+
+    _decorator_style = 'pretty'
 
 
 class TestDecoratorDocs(TestCase):
@@ -58,20 +160,20 @@ class TestDecoratorDocs(TestCase):
 
     def test_read_lock_passthrough(self):
         """@needs_read_lock exposes underlying name and doc."""
-        sam = DecoratorSample()
+        sam = create_decorator_sample(None)
         self.assertEqual('frob', sam.frob.__name__)
         self.assertEqual('Frob the sample object', sam.frob.__doc__)
 
     def test_write_lock_passthrough(self):
         """@needs_write_lock exposes underlying name and doc."""
-        sam = DecoratorSample()
+        sam = create_decorator_sample(None)
         self.assertEqual('bank', sam.bank.__name__)
         self.assertEqual('Bank the sample, but using bar and biz.',
                          sam.bank.__doc__)
 
     def test_argument_passthrough(self):
         """Test that arguments get passed around properly."""
-        sam = DecoratorSample()
+        sam = create_decorator_sample(None)
         sam.bank('1', biz='2')
         self.assertEqual(['lock_write',
                           ('bank', '1', '2'),
